 cnp-nist-ac-3-3-limit-pod-egress-3vek9us.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnp-nist-ac-3-3-limit-pod-egress-7qkwocy
  namespace: kube-system
spec:
  description: "After applying the policy, This pod can only access other pods within the Namespace"
  endpointSelector:
    matchLabels:
      controller-revision-hash: 56889964d4
      k8s-app: cilium
      pod-template-generation: 1
  egress:
    - toEndpoints:
        - {}
